@@ -29,87 +29,88 @@
 
 
 #define OFS16(buf,x) \
-  ((buf[0]==x[0] && buf[0+1]==x[1])?0: \
-  ((buf[1]==x[0] && buf[1+1]==x[1])?1: \
-  ((buf[2]==x[0] && buf[2+1]==x[1])?2: \
-  ((buf[3]==x[0] && buf[3+1]==x[1])?3: \
-  ((buf[4]==x[0] && buf[4+1]==x[1])?4: \
-  ((buf[5]==x[0] && buf[5+1]==x[1])?5: \
-  ((buf[6]==x[0] && buf[6+1]==x[1])?6: \
-  ((buf[7]==x[0] && buf[7+1]==x[1])?7: \
-  ((buf[8]==x[0] && buf[8+1]==x[1])?8: \
-  ((buf[9]==x[0] && buf[9+1]==x[1])?9: \
-  ((buf[10]==x[0] && buf[10+1]==x[1])?10: \
-  ((buf[11]==x[0] && buf[11+1]==x[1])?11: \
-  ((buf[12]==x[0] && buf[12+1]==x[1])?12: \
-  ((buf[13]==x[0] && buf[13+1]==x[1])?13: \
-  ((buf[14]==x[0] && buf[14+1]==x[1])?14: \
-  ((buf[15]==x[0] && buf[15+1]==x[1])?15: \
-  ((buf[16]==x[0] && buf[16+1]==x[1])?16: \
-  ((buf[17]==x[0] && buf[17+1]==x[1])?17: \
-  ((buf[18]==x[0] && buf[18+1]==x[1])?18: \
-  ((buf[19]==x[0] && buf[19+1]==x[1])?19: \
-  ((buf[20]==x[0] && buf[20+1]==x[1])?20: \
-  ((buf[21]==x[0] && buf[21+1]==x[1])?21: \
-  ((buf[22]==x[0] && buf[22+1]==x[1])?22: \
-  ((buf[23]==x[0] && buf[23+1]==x[1])?23: \
-  ((buf[24]==x[0] && buf[24+1]==x[1])?24: \
-  ((buf[25]==x[0] && buf[25+1]==x[1])?25: \
-  ((buf[26]==x[0] && buf[26+1]==x[1])?26: \
-  ((buf[27]==x[0] && buf[27+1]==x[1])?27: \
-  ((buf[28]==x[0] && buf[28+1]==x[1])?28: \
-  ((buf[29]==x[0] && buf[29+1]==x[1])?29: \
-  ((buf[30]==x[0] && buf[30+1]==x[1])?30: \
-  ((buf[31]==x[0] && buf[31+1]==x[1])?31: \
-  ((buf[32]==x[0] && buf[32+1]==x[1])?32: \
-  ((buf[33]==x[0] && buf[33+1]==x[1])?33: \
-  ((buf[34]==x[0] && buf[34+1]==x[1])?34: \
-  ((buf[35]==x[0] && buf[35+1]==x[1])?35: \
-  ((buf[36]==x[0] && buf[36+1]==x[1])?36: \
-  ((buf[37]==x[0] && buf[37+1]==x[1])?37: \
-  ((buf[38]==x[0] && buf[38+1]==x[1])?38: \
-  ((buf[39]==x[0] && buf[39+1]==x[1])?39: \
-  ((buf[40]==x[0] && buf[40+1]==x[1])?40: \
-  ((buf[41]==x[0] && buf[41+1]==x[1])?41: \
-  ((buf[42]==x[0] && buf[42+1]==x[1])?42: \
-  ((buf[43]==x[0] && buf[43+1]==x[1])?43: \
-  ((buf[44]==x[0] && buf[44+1]==x[1])?44: \
-  ((buf[45]==x[0] && buf[45+1]==x[1])?45: \
-  ((buf[46]==x[0] && buf[46+1]==x[1])?46: \
-  ((buf[47]==x[0] && buf[47+1]==x[1])?47: \
-  ((buf[48]==x[0] && buf[48+1]==x[1])?48: \
-  ((buf[49]==x[0] && buf[49+1]==x[1])?49: \
-  ((buf[50]==x[0] && buf[50+1]==x[1])?50: \
-  ((buf[51]==x[0] && buf[51+1]==x[1])?51: \
-  ((buf[52]==x[0] && buf[52+1]==x[1])?52: \
-  ((buf[53]==x[0] && buf[53+1]==x[1])?53: \
-  ((buf[54]==x[0] && buf[54+1]==x[1])?54: \
-  ((buf[55]==x[0] && buf[55+1]==x[1])?55: \
-  ((buf[56]==x[0] && buf[56+1]==x[1])?56: \
-  ((buf[57]==x[0] && buf[57+1]==x[1])?57: \
-  ((buf[58]==x[0] && buf[58+1]==x[1])?58: \
-  ((buf[59]==x[0] && buf[59+1]==x[1])?59: \
-  ((buf[60]==x[0] && buf[60+1]==x[1])?60: \
-  ((buf[61]==x[0] && buf[61+1]==x[1])?61: \
-  ((buf[62]==x[0] && buf[62+1]==x[1])?62: \
-  ((buf[63]==x[0] && buf[63+1]==x[1])?63: \
-  ((buf[64]==x[0] && buf[64+1]==x[1])?64: \
-  ((buf[65]==x[0] && buf[65+1]==x[1])?65: \
-  ((buf[66]==x[0] && buf[66+1]==x[1])?66: \
-  ((buf[67]==x[0] && buf[67+1]==x[1])?67: \
-  ((buf[68]==x[0] && buf[68+1]==x[1])?68: \
-  ((buf[69]==x[0] && buf[69+1]==x[1])?69: \
-  ((buf[70]==x[0] && buf[70+1]==x[1])?70: \
-  ((buf[71]==x[0] && buf[71+1]==x[1])?71: \
-  ((buf[72]==x[0] && buf[72+1]==x[1])?72: \
-  ((buf[73]==x[0] && buf[73+1]==x[1])?73: \
-  ((buf[74]==x[0] && buf[74+1]==x[1])?74: \
-  ((buf[75]==x[0] && buf[75+1]==x[1])?75: \
-  ((buf[76]==x[0] && buf[76+1]==x[1])?76: \
-  ((buf[77]==x[0] && buf[77+1]==x[1])?77: \
-  ((buf[78]==x[0] && buf[78+1]==x[1])?78: \
-  ((buf[79]==x[0] && buf[79+1]==x[1])?79: \
+  ((sizeof(buf)>0+1 && buf[0]==x[0] && buf[0+1]==x[1])?0: \
+  ((sizeof(buf)>1+1 && buf[1]==x[0] && buf[1+1]==x[1])?1: \
+  ((sizeof(buf)>2+1 && buf[2]==x[0] && buf[2+1]==x[1])?2: \
+  ((sizeof(buf)>3+1 && buf[3]==x[0] && buf[3+1]==x[1])?3: \
+  ((sizeof(buf)>4+1 && buf[4]==x[0] && buf[4+1]==x[1])?4: \
+  ((sizeof(buf)>5+1 && buf[5]==x[0] && buf[5+1]==x[1])?5: \
+  ((sizeof(buf)>6+1 && buf[6]==x[0] && buf[6+1]==x[1])?6: \
+  ((sizeof(buf)>7+1 && buf[7]==x[0] && buf[7+1]==x[1])?7: \
+  ((sizeof(buf)>8+1 && buf[8]==x[0] && buf[8+1]==x[1])?8: \
+  ((sizeof(buf)>9+1 && buf[9]==x[0] && buf[9+1]==x[1])?9: \
+  ((sizeof(buf)>10+1 && buf[10]==x[0] && buf[10+1]==x[1])?10: \
+  ((sizeof(buf)>11+1 && buf[11]==x[0] && buf[11+1]==x[1])?11: \
+  ((sizeof(buf)>12+1 && buf[12]==x[0] && buf[12+1]==x[1])?12: \
+  ((sizeof(buf)>13+1 && buf[13]==x[0] && buf[13+1]==x[1])?13: \
+  ((sizeof(buf)>14+1 && buf[14]==x[0] && buf[14+1]==x[1])?14: \
+  ((sizeof(buf)>15+1 && buf[15]==x[0] && buf[15+1]==x[1])?15: \
+  ((sizeof(buf)>16+1 && buf[16]==x[0] && buf[16+1]==x[1])?16: \
+  ((sizeof(buf)>17+1 && buf[17]==x[0] && buf[17+1]==x[1])?17: \
+  ((sizeof(buf)>18+1 && buf[18]==x[0] && buf[18+1]==x[1])?18: \
+  ((sizeof(buf)>19+1 && buf[19]==x[0] && buf[19+1]==x[1])?19: \
+  ((sizeof(buf)>20+1 && buf[20]==x[0] && buf[20+1]==x[1])?20: \
+  ((sizeof(buf)>21+1 && buf[21]==x[0] && buf[21+1]==x[1])?21: \
+  ((sizeof(buf)>22+1 && buf[22]==x[0] && buf[22+1]==x[1])?22: \
+  ((sizeof(buf)>23+1 && buf[23]==x[0] && buf[23+1]==x[1])?23: \
+  ((sizeof(buf)>24+1 && buf[24]==x[0] && buf[24+1]==x[1])?24: \
+  ((sizeof(buf)>25+1 && buf[25]==x[0] && buf[25+1]==x[1])?25: \
+  ((sizeof(buf)>26+1 && buf[26]==x[0] && buf[26+1]==x[1])?26: \
+  ((sizeof(buf)>27+1 && buf[27]==x[0] && buf[27+1]==x[1])?27: \
+  ((sizeof(buf)>28+1 && buf[28]==x[0] && buf[28+1]==x[1])?28: \
+  ((sizeof(buf)>29+1 && buf[29]==x[0] && buf[29+1]==x[1])?29: \
+  ((sizeof(buf)>30+1 && buf[30]==x[0] && buf[30+1]==x[1])?30: \
+  ((sizeof(buf)>31+1 && buf[31]==x[0] && buf[31+1]==x[1])?31: \
+  ((sizeof(buf)>32+1 && buf[32]==x[0] && buf[32+1]==x[1])?32: \
+  ((sizeof(buf)>33+1 && buf[33]==x[0] && buf[33+1]==x[1])?33: \
+  ((sizeof(buf)>34+1 && buf[34]==x[0] && buf[34+1]==x[1])?34: \
+  ((sizeof(buf)>35+1 && buf[35]==x[0] && buf[35+1]==x[1])?35: \
+  ((sizeof(buf)>36+1 && buf[36]==x[0] && buf[36+1]==x[1])?36: \
+  ((sizeof(buf)>37+1 && buf[37]==x[0] && buf[37+1]==x[1])?37: \
+  ((sizeof(buf)>38+1 && buf[38]==x[0] && buf[38+1]==x[1])?38: \
+  ((sizeof(buf)>39+1 && buf[39]==x[0] && buf[39+1]==x[1])?39: \
+  ((sizeof(buf)>40+1 && buf[40]==x[0] && buf[40+1]==x[1])?40: \
+  ((sizeof(buf)>41+1 && buf[41]==x[0] && buf[41+1]==x[1])?41: \
+  ((sizeof(buf)>42+1 && buf[42]==x[0] && buf[42+1]==x[1])?42: \
+  ((sizeof(buf)>43+1 && buf[43]==x[0] && buf[43+1]==x[1])?43: \
+  ((sizeof(buf)>44+1 && buf[44]==x[0] && buf[44+1]==x[1])?44: \
+  ((sizeof(buf)>45+1 && buf[45]==x[0] && buf[45+1]==x[1])?45: \
+  ((sizeof(buf)>46+1 && buf[46]==x[0] && buf[46+1]==x[1])?46: \
+  ((sizeof(buf)>47+1 && buf[47]==x[0] && buf[47+1]==x[1])?47: \
+  ((sizeof(buf)>48+1 && buf[48]==x[0] && buf[48+1]==x[1])?48: \
+  ((sizeof(buf)>49+1 && buf[49]==x[0] && buf[49+1]==x[1])?49: \
+  ((sizeof(buf)>50+1 && buf[50]==x[0] && buf[50+1]==x[1])?50: \
+  ((sizeof(buf)>51+1 && buf[51]==x[0] && buf[51+1]==x[1])?51: \
+  ((sizeof(buf)>52+1 && buf[52]==x[0] && buf[52+1]==x[1])?52: \
+  ((sizeof(buf)>53+1 && buf[53]==x[0] && buf[53+1]==x[1])?53: \
+  ((sizeof(buf)>54+1 && buf[54]==x[0] && buf[54+1]==x[1])?54: \
+  ((sizeof(buf)>55+1 && buf[55]==x[0] && buf[55+1]==x[1])?55: \
+  ((sizeof(buf)>56+1 && buf[56]==x[0] && buf[56+1]==x[1])?56: \
+  ((sizeof(buf)>57+1 && buf[57]==x[0] && buf[57+1]==x[1])?57: \
+  ((sizeof(buf)>58+1 && buf[58]==x[0] && buf[58+1]==x[1])?58: \
+  ((sizeof(buf)>59+1 && buf[59]==x[0] && buf[59+1]==x[1])?59: \
+  ((sizeof(buf)>60+1 && buf[60]==x[0] && buf[60+1]==x[1])?60: \
+  ((sizeof(buf)>61+1 && buf[61]==x[0] && buf[61+1]==x[1])?61: \
+  ((sizeof(buf)>62+1 && buf[62]==x[0] && buf[62+1]==x[1])?62: \
+  ((sizeof(buf)>63+1 && buf[63]==x[0] && buf[63+1]==x[1])?63: \
+  ((sizeof(buf)>64+1 && buf[64]==x[0] && buf[64+1]==x[1])?64: \
+  ((sizeof(buf)>65+1 && buf[65]==x[0] && buf[65+1]==x[1])?65: \
+  ((sizeof(buf)>66+1 && buf[66]==x[0] && buf[66+1]==x[1])?66: \
+  ((sizeof(buf)>67+1 && buf[67]==x[0] && buf[67+1]==x[1])?67: \
+  ((sizeof(buf)>68+1 && buf[68]==x[0] && buf[68+1]==x[1])?68: \
+  ((sizeof(buf)>69+1 && buf[69]==x[0] && buf[69+1]==x[1])?69: \
+  ((sizeof(buf)>70+1 && buf[70]==x[0] && buf[70+1]==x[1])?70: \
+  ((sizeof(buf)>71+1 && buf[71]==x[0] && buf[71+1]==x[1])?71: \
+  ((sizeof(buf)>72+1 && buf[72]==x[0] && buf[72+1]==x[1])?72: \
+  ((sizeof(buf)>73+1 && buf[73]==x[0] && buf[73+1]==x[1])?73: \
+  ((sizeof(buf)>74+1 && buf[74]==x[0] && buf[74+1]==x[1])?74: \
+  ((sizeof(buf)>75+1 && buf[75]==x[0] && buf[75+1]==x[1])?75: \
+  ((sizeof(buf)>76+1 && buf[76]==x[0] && buf[76+1]==x[1])?76: \
+  ((sizeof(buf)>77+1 && buf[77]==x[0] && buf[77+1]==x[1])?77: \
+  ((sizeof(buf)>78+1 && buf[78]==x[0] && buf[78+1]==x[1])?78: \
+  ((sizeof(buf)>79+1 && buf[79]==x[0] && buf[79+1]==x[1])?79: \
   -1))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))))
+
 
 #if 0
                _
